--- a/src/styles/about.css
+++ b/src/styles/about.css
@@ -3,17 +3,17 @@
   flex-direction: column;
   align-items: center;
   justify-content: flex-start;
-  padding: 2rem;
 }
 #about-title {
   font-size: 2rem;
   padding: 1.5rem 2.5rem;
-  background-color: #c5c5c5;
+  background-color: hsl(0, 0%, 77%);
   padding: 1rem 1.5rem;
-  margin-bottom: 1.5rem;
+  margin-bottom: 2.5rem;
 }
 #top-bar {
   width: 100%;
+  max-width: 40rem;
 }
 #headshot-holder {
   background-color: #b4b4b4;
