--- a/src/styles/gallery.css
+++ b/src/styles/gallery.css
@@ -1,9 +1,12 @@
 #gallery-page {
-  display: flex;
+  display: flexbox;
   flex-direction: column;
   align-items: center;
   justify-content: flex-start;
-  padding: 2rem;
+  width: 100%;
+  flex-basis: 100%;
+  flex-grow: 0;
+  flex-shrink: 0;
 }
 #item-holder {
   display: flex;
@@ -17,4 +20,12 @@
   background-color: #c5c5c5;
   border: 0px solid transparent;
   border-radius: 50%;
+  margin-bottom: 2.5rem;
+}
+#gal-title-holder {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
 }
