--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -1,9 +1,13 @@
 #home-page {
-  display: flex;
+  display: flexbox;
   flex-direction: column;
   align-items: center;
   justify-content: flex-start;
-  padding: 2rem;
+  width: 100%;
+  flex-basis: 100%;
+  flex-grow: 0;
+  flex-shrink: 0;
+  max-width: 55rem;
 }
 #home-title {
   font-size: 2rem;
@@ -11,4 +15,12 @@
   background-color: #c5c5c5;
   border: 0px solid transparent;
   border-radius: 5rem;
+  margin-bottom: 2.5rem;
+}
+#home-title-holder {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
 }
