--- a/src/styles/about.css
+++ b/src/styles/about.css
@@ -7,7 +7,7 @@
 #about-title {
   font-size: 2rem;
   padding: 1.5rem 2.5rem;
-  background-color: hsl(0, 0%, 77%);
+  background-color: #c5c5c5;
   padding: 1rem 1.5rem;
   margin-bottom: 2.5rem;
 }
