--- a/src/styles/common.css
+++ b/src/styles/common.css
@@ -1,6 +1,7 @@
 .bod {
   padding: 2rem;
   width: 100%;
+  min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -8,4 +9,22 @@
 }
 .inner-bod {
   max-width: 65rem;
+}
+.web-bg {
+  background-color: #87e7d1;
+}
+.text-bg {
+  background-color: #c5fcee;
+}
+.text-alt-bg {
+  background-color: #affdf2;
+}
+.button-bg {
+  background-color: #46ced7;
+}
+.img-bg {
+  background-color: #39afa8;
+}
+.symbol {
+  background-color: #2f4858;
 }
