--- a/src/styles/piece-focus.css
+++ b/src/styles/piece-focus.css
@@ -29,3 +29,36 @@
 .focus-info-bit {
   margin: 0.125rem;
 }
+#focus-img-holder {
+  padding: 2rem;
+  border: 0px solid transparent;
+  border-top-right-radius: 2rem;
+  border-top-left-radius: 2rem;
+}
+#focus-img {
+  width: 100%;
+}
+#focus-bottom {
+  padding: 2rem;
+  border-bottom-right-radius: 50rem;
+  border-bottom-left-radius: 50rem;
+}
+#focus-text {
+  text-align: start;
+}
+#focus-button {
+  background-color: #46ced7;
+  border: 0px solid transparent;
+  border-radius: 10rem;
+  padding: 1.5rem 2rem;
+}
+#focus-button:hover {
+  background-color: #17a2b5;
+}
+#focus-button p {
+  margin: 0;
+  color: #000000;
+}
+#focus-button:hover p {
+  color: #ffffff;
+}
