--- a/src/styles/gallery-item.css
+++ b/src/styles/gallery-item.css
@@ -66,22 +66,33 @@
   margin-bottom: 0.125rem;
   margin-top: 0.125rem;
 }
+.right .data {
+  text-align: start;
+}
+.left .data {
+  text-align: end;
+}
 .bottom-text {
   padding: 1rem;
   width: 100%;
   max-width: 40rem;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 .right .bottom-text {
   border: 0px solid transparent;
   border-top-right-radius: 5rem;
   border-bottom-right-radius: 5rem;
   border-bottom-left-radius: 5rem;
+  flex-direction: row;
 }
 .left .bottom-text {
   border: 0px solid transparent;
   border-top-left-radius: 5rem;
   border-bottom-left-radius: 5rem;
   border-bottom-right-radius: 5rem;
+  flex-direction: row-reverse;
 }
 .short-blurb {
   margin-bottom: 0.125rem;
@@ -94,4 +105,26 @@
 .left .short-blurb {
   text-align: end;
   padding-right: 0.25rem;
+}
+#more-button {
+  padding: 0.5rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: 0px solid transparent;
+  border-radius: 50%;
+}
+#more-plus {
+  width: 1.25rem;
+  margin: 0;
+  padding: 0;
+}
+
+@media (max-width: 530px) {
+  .right .info {
+    border-bottom-right-radius: 2.5rem;
+  }
+  .left .info {
+    border-bottom-left-radius: 2.5rem;
+  }
 }
