--- a/src/styles/common.css
+++ b/src/styles/common.css
@@ -24,7 +24,7 @@
   background-color: #46ced7;
 }
 .img-bg {
-  background-color: #39afa8;
+  background-color: #4f9995;
 }
 .button {
   background-color: #46ced7;
