--- a/src/styles/gallery.css
+++ b/src/styles/gallery.css
@@ -10,7 +10,7 @@
 }
 #item-holder {
   display: flex;
-  flex-direction: column;
+  flex-direction: column-reverse;
   align-items: center;
   justify-content: flex-start;
 }
