--- a/src/styles/home-item.css
+++ b/src/styles/home-item.css
@@ -28,6 +28,19 @@
   align-items: center;
   padding: 0.75rem;
   text-decoration: none;
+  transition-property: width, max-width, background-color;
+  transition-duration: 0.125s;
+  transition-timing-function: ease-in;
+}
+.name-holder:hover {
+  width: 50%;
+  max-width: 15rem;
+  transition-property: width, max-width, background-color;
+  transition-duration: 0.125s;
+  transition-timing-function: ease-in;
+}
+.name-holder:hover h2 {
+  color: #ffffff;
 }
 .right .name-holder {
   flex-direction: row-reverse;
