--- a/src/styles/common.css
+++ b/src/styles/common.css
@@ -37,3 +37,16 @@
 .head-bg {
   background-color: #55b4a0;
 }
+h1 {
+  font-family: Oswald, sans-serif;
+  font-size: 2.5rem;
+  font-weight: 600;
+}
+h2 {
+  font-family: Oswald, sans-serif;
+  font-size: 2rem;
+  font-weight: 400;
+}
+p {
+  font-family: "Nunito Sans", sans-serif;
+}
