--- a/src/styles/gallery-item.css
+++ b/src/styles/gallery-item.css
@@ -42,7 +42,7 @@
   max-width: 100%;
 }
 .info {
-  max-width: 45%;
+  max-width: 13rem;
   padding: 0.75rem 1rem;
 }
 .right .info {
@@ -59,12 +59,13 @@
   flex-direction: column;
   justify-content: flex-end;
   align-items: flex-end;
+  border: 0px solid transparent;
   border-top-left-radius: 2.5rem;
   padding-left: 1.5rem;
 }
 .info h2 {
-  font-size: 1rem;
-  font-weight: bold;
+  font-size: 1.125rem;
+  font-weight: 600;
 }
 .info p {
   font-style: italic;
@@ -126,6 +127,9 @@
   margin: 0;
   padding: 0;
 }
+.info-holder {
+  background-color: transparent !important;
+}
 
 @media (max-width: 600px) {
   .right .info {
@@ -133,5 +137,55 @@
   }
   .left .info {
     border-bottom-left-radius: 2.5rem;
+  }
+}
+
+@media (max-width: 500px) {
+  .tombstone {
+    flex-direction: column;
+    align-items: center;
+  }
+  .left .tombstone {
+    flex-direction: column;
+  }
+  .img-holder {
+    width: 100%;
+    max-width: 100%;
+    padding: 1rem;
+  }
+  .info-holder {
+    width: 100%;
+    background-color: #affdf2 !important;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+  }
+  .left .info-holder {
+    justify-content: flex-end;
+  }
+  .right .info-holder {
+    justify-content: flex-start;
+  }
+  .info {
+    max-width: 100%;
+  }
+  .right .info {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    align-items: flex-start;
+    padding-right: 1.5rem;
+    border-radius: 0;
+  }
+  .left .info {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    align-items: flex-end;
+    padding-left: 1.5rem;
+    border-radius: 0;
+  }
+  .bottom-text {
+    border-radius: 0 0 2rem 2rem !important;
   }
 }
