--- a/src/styles/piece-focus.css
+++ b/src/styles/piece-focus.css
@@ -1,9 +1,11 @@
 #focus-bar {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
   margin-bottom: 2.5rem;
+}
+#focus-title-holder {
+  padding: 0;
+  margin: 0;
+  border: 0px solid transparent;
+  border-radius: 10rem 0 0 10rem;
 }
 #focus-title {
   font-size: 2rem;
@@ -13,8 +15,14 @@
   border-bottom-left-radius: 10rem;
   margin: 0;
 }
+#focus-info-holder {
+  padding: 0;
+  margin: 0;
+  border: 0px solid transparent;
+  border-radius: 0 10rem 10rem 0;
+}
 #focus-info {
-  height: 6.4rem;
+  height: 100%;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
@@ -28,6 +36,8 @@
 }
 .focus-info-bit {
   margin: 0.125rem;
+  text-align: start;
+  font-style: italic;
 }
 #focus-img-holder {
   padding: 2rem;
