added Frog Factory

--- a/src/styles/gallery-item.css
+++ b/src/styles/gallery-item.css
@@ -167,7 +167,7 @@
     justify-content: flex-start;
   }
   .info {
-    max-width: 100%;
+    width: 100%;
   }
   .right .info {
     display: flex;
